--- a/YGRichText_Pod/Podfile
+++ b/YGRichText_Pod/Podfile
@@ -2,7 +2,8 @@ platform:ios,'10.0'
 inhibit_all_warnings!
 
 target 'YGRichText' do
-#  pod 'YGRichText_Swift'
+  pod 'SnapKit'
+#  pod 'YGRichText_Swift', '1.3.0'
   pod 'YGRichText_Swift', :path => '../'
 
 end
